2014-04-03  Julien Bect  <julien.bect@supelec.fr>

	Add (multivariate) cubic linear models.

	* lm/@stk_lm_cubic: New class
	* lm/@stk_lm_cubic/stk_lm_cubic.m: New function (constructor)
	* lm/@stk_lm_cubic/feval.m: New function

2014-03-31  Julien Bect  <julien.bect@supelec.fr>

	Introduce a new (experimental) feature: linear models.

	* core/stk_ortho_func.m: Modified to handle model.order == NaN.
	* paramestim/stk_param_init.m: Modified to handle model.order == NaN.
	* config/stk_config_path.m: Add lm to the path.
	* lm/@stk_lm_affine/stk_lm_affine.m: New function
	* lm/@stk_lm_affine/feval.m: New function
	* lm/@stk_lm_constant/stk_lm_constant.m: New function
	* lm/@stk_lm_constant/feval.m: New function
	* lm/@stk_lm_matrix/stk_lm_matrix.m: New function
	* lm/@stk_lm_matrix/feval.m: New function
	* lm/@stk_lm_null/stk_lm_null.m: New function
	* lm/@stk_lm_null/feval.m: New function
	* lm/@stk_lm_quadratic/stk_lm_quadratic.m: New function
	* lm/@stk_lm_quadratic/feval.m: New function
	* examples/03_miscellaneous/stk_example_misc03.m: New example script.

2014-03-29  Julien Bect  <julien.bect@supelec.fr>

	Do not add config to in the path.

	* config/stk_config_path.m: Remove config from the list of STK
	subdirectories to be added to the path.
	* stk_init.m: Remove config from the path at the end of
	initialization.
	* misc/test/stk_runtests.m: Do not assume that config is in the
	path.

2014-03-26  Julien Bect  <julien.bect@supelec.fr>

	Rename stk_config_graphicstoolkit tp graphics_toolkit.

	* config/stk_config_graphicstoolkit.m: Renamed.
	* misc/mole/graphics_toolkit/graphics_toolkit.m: Formerly known as
	stk_config_graphicstoolkit. Modified to be a (partial) replacement
	of the Octave function with the same name.
	* misc/mole/init.m: Add graphics_toolkit to the path only when
	needed, i.e., when using Matlab or an old version of Octave.
	* examples/03_miscellaneous/stk_example_misc02.m: Modified.
